<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_change_text">

    <TextView
        android:id="@+id/textViewTitleGuia4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_text_view"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewButtonSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_selected"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="201dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/message_text_view"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewButtonSelected"
        app:layout_constraintStart_toStartOf="@+id/textViewButtonSelected"
        app:layout_constraintTop_toBottomOf="@+id/textViewButtonSelected" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="114dp"
        android:layout_height="94dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitleGuia4"
        app:layout_constraintStart_toStartOf="@+id/textViewTitleGuia4"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleGuia4"
        tools:srcCompat="@drawable/avatar" />

    <Button
        android:id="@+id/buttonServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/services"
        android:background="@drawable/button_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage" />

    <Button
        android:id="@+id/buttonBriefcase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/briefcase"
        android:background="@drawable/button_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonServices" />

    <Button
        android:id="@+id/buttonContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/contact"
        android:background="@drawable/button_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAbout" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about"
        android:background="@drawable/button_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBriefcase" />

    <Button
        android:id="@+id/buttonSocialNetworks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/social_networks"
        android:background="@drawable/button_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonContact" />

    <Button
        android:id="@+id/buttonGoToGuia6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/after"
        app:layout_constraintBottom_toBottomOf="@+id/buttonGoToGuia3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonGoToGuia3" />

    <Button
        android:id="@+id/buttonGoToGuia3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/before"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSocialNetworks" />
</androidx.constraintlayout.widget.ConstraintLayout>