<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_change_colors"
    android:id="@+id/background">

    <TextView
        android:id="@+id/textViewColores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/title_colors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/red"
        app:layout_constraintEnd_toEndOf="@+id/textViewColores"
        app:layout_constraintStart_toStartOf="@+id/textViewColores"
        app:layout_constraintTop_toBottomOf="@+id/textViewColores" />

    <Button
        android:id="@+id/buttonWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/white"
        app:layout_constraintEnd_toEndOf="@+id/buttonRed"
        app:layout_constraintStart_toStartOf="@+id/buttonRed"
        app:layout_constraintTop_toBottomOf="@+id/buttonRed" />

    <Button
        android:id="@+id/buttonGoToGuia4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/after"
        app:layout_constraintBottom_toBottomOf="@+id/buttonGoToGuia1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonGoToGuia1" />

    <Button
        android:id="@+id/buttonGoToGuia1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="100dp"
        android:text="@string/before"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonWhite" />
</androidx.constraintlayout.widget.ConstraintLayout>